--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="232dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginRight="0dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,22 +141,22 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="baothuc"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="110dp"
-                app:srcCompat="@drawable/ambulance" />
+                android:background="@drawable/baothuc" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:text="Goi xe cap cuu"
+                android:text="Báo uống thuốc"
                 android:textColor="#FF1100" />
         </LinearLayout>
 
