--- a/app/src/main/res/layout/activity_bantin.xml
+++ b/app/src/main/res/layout/activity_bantin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:shimmer="http://schemas.android.com/apk/res-auto"
-    tools:context=".chat.BangTinActyvity"
+    tools:context=".chatgroup.BangTinActyvity"
     android:layout_margin="20dp">
 
     <TextView
