--- a/app/src/main/res/layout/activity_list_sick.xml
+++ b/app/src/main/res/layout/activity_list_sick.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".drugandhopistal.ListCategoryDrug">
+    tools:context=".drugandhopistal.ListCategoryDrug_activity">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/rcListSick"
