--- a/app/src/main/res/layout/activity_resgistration.xml
+++ b/app/src/main/res/layout/activity_resgistration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chat.resgistration">
+    tools:context=".chatgroup.Resgistration_activity">
 
     <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/spin_kitres"
@@ -74,6 +74,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:password="true"
         android:background="@drawable/customedt"
         android:ems="10"
         android:hint="@string/password"
@@ -93,6 +94,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:password="true"
         android:background="@drawable/customedt"
         android:ems="10"
         android:hint="@string/password"
