--- a/app/src/main/res/layout/dang_bai_activity.xml
+++ b/app/src/main/res/layout/dang_bai_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".chat.DangBaiActivity"
+    tools:context=".chatgroup.DangBaiActivity"
     android:layout_margin="20dp">
     <TextView
         android:text="@string/taobaiviet"
@@ -91,5 +91,16 @@
         app:SpinKit_Color="#2EB933" />
 </LinearLayout>
 
-
+<TextView
+    android:text="Hủy"
+    android:gravity="center_horizontal"
+    android:layout_marginTop="15dp"
+    android:textColor="#070707"
+    android:textSize="35dp"
+    android:textStyle="bold"
+    android:onClick="huy"
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/custom_buttom_3"
+    android:layout_width="100dp"
+    android:layout_height="50dp" />
 </LinearLayout>
