--- a/app/src/main/res/layout/main_comment_activity.xml
+++ b/app/src/main/res/layout/main_comment_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#FFFFFFFF"
     android:layout_height="match_parent"
-    tools:context=".chat.CommentGroup">
+    tools:context=".chatgroup.CommentGroup_actitvity">
 
 
     <ScrollView
