--- a/app/src/main/res/layout/activity_sick_activity.xml
+++ b/app/src/main/res/layout/activity_sick_activity.xml
@@ -6,45 +6,59 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".Sick_activity">
-    <TextView
-        android:id="@+id/tvNameSick"
+
+    <ScrollView
+        android:fillViewport="true"
         android:layout_width="match_parent"
-        android:paddingLeft="20dp"
-        android:paddingTop="6dp"
-        android:text="ten thuoc"
-        android:background="@drawable/custom_buttom_3"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/textBlack"
-        android:layout_height="55dp" />
-    <LinearLayout
-        android:background="@drawable/custom_buttom_3"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
-        <TextView
-            android:paddingTop="4dp"
-            android:paddingLeft="20dp"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/textBlack"
+        android:layout_height="match_parent">
 
-            android:layout_width="wrap_content"
-            android:text="Cách sơ cứu:"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:paddingTop="4dp"
-            android:paddingLeft="5dp"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:text="thanh phan"
-            android:paddingRight="4dp"
-            android:id="@+id/tvSocuu"
-            android:textColor="@color/textBlack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvNameSick"
+                android:layout_width="match_parent"
+                android:paddingLeft="20dp"
+                android:paddingTop="6dp"
+                android:text="ten thuoc"
+                android:background="@drawable/custom_buttom_3"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/textBlack"
+                android:layout_height="55dp" />
+            <LinearLayout
+                android:background="@drawable/custom_buttom_3"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:paddingTop="4dp"
+                    android:paddingLeft="20dp"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/textBlack"
 
+                    android:layout_width="wrap_content"
+                    android:text="Cách sơ cứu:"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:paddingTop="4dp"
+                    android:paddingLeft="5dp"
+                    android:textSize="15dp"
+                    android:textStyle="normal"
+                    android:text="thanh phan"
+                    android:paddingRight="4dp"
+                    android:id="@+id/tvSocuu"
+                    android:textColor="@color/textBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
