--- a/app/src/main/res/layout/activity_step_counter.xml
+++ b/app/src/main/res/layout/activity_step_counter.xml
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="60dp"
-            android:text="SOBước"
+            android:text="0"
             android:textColor="#ffff"
             android:textSize="40dp"
             android:textStyle="italic" />
@@ -90,6 +90,19 @@
             android:textColor="#ffff"
             android:textSize="40dp"
             android:textStyle="italic" />
+        <TextView
+            android:onClick="lammoingay"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/custom_buttom_2"
+            android:layout_width="115dp"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Làm mới"
+            android:textColor="#ffff"
+            android:textSize="25dp"
+            android:textStyle="normal" />
+
 
     </LinearLayout>
 
@@ -114,7 +127,6 @@
             android:textColor="#FFFF"
             android:gravity="center_vertical|center_horizontal"
             android:text="Hôm nay"
-            android:onClick="homnay"
             android:textSize="35dp"
             android:layout_width="192dp"
             android:layout_height="match_parent" />
