--- a/app/src/main/res/drawable/custom_buttom_2.xml
+++ b/app/src/main/res/drawable/custom_buttom_2.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke android:color="#2B2B2B" android:width="1dp"/>
-    <corners android:radius="20dp"></corners>
+    <corners android:radius="25dp"></corners>
+    <solid android:color="#2D9631"></solid>
 
 </shape>
