--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".WelcomeScreen">
 
     <ImageView
-        android:layout_width="410dp"
+        android:layout_width="341dp"
         android:layout_height="730dp"
         android:layout_marginStart="67dp"
         android:layout_marginLeft="67dp"
@@ -19,6 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/y2"
+        app:srcCompat="@drawable/heart"
         tools:ignore="VectorDrawableCompat" />
 </android.support.constraint.ConstraintLayout>
