--- a/app/src/main/res/layout/activity_resgistration.xml
+++ b/app/src/main/res/layout/activity_resgistration.xml
@@ -27,8 +27,12 @@
         app:layout_constraintTop_toBottomOf="@+id/edtPassword2"
         app:layout_constraintVertical_bias="0.117" />
 
-    <ImageView
-
+    <TextView
+        android:text="@string/dangkicd"
+        android:textColor="#028B08"
+        android:textSize="27dp"
+        android:textStyle="bold"
+        android:gravity="center_vertical|center_horizontal"
         android:id="@+id/imageView6"
         android:layout_width="300dp"
         android:layout_height="88dp"
