--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,32 +6,41 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/steps"
-            android:icon="@drawable/hospital_4"
+            android:icon="@drawable/dibo"
             android:title="Đếm bước đi" />
     </group>
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/khoiluongct"
-            android:icon="@drawable/pills"
+            android:icon="@drawable/banchan"
             android:title="Đo khối lượng cơ thể" />
     </group>
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/baouongthuoc"
+            android:icon="@drawable/baouongthuoc"
+            android:title="Báo uống thuốc" />
+    </group>
+
+
+    <group android:checkableBehavior="single">
+        <item
             android:id="@+id/news"
-            android:icon="@drawable/medicine"
+            android:icon="@drawable/docbao"
             android:title="Báo sức khỏe" />
     </group>
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/aboutme"
-            android:icon="@drawable/useerr"
+            android:icon="@drawable/aboutmee"
             android:title="Về chúng tôi" />
     </group>
+
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/exits"
-            android:icon="@drawable/eye"
+            android:icon="@drawable/ic_close_black_24dp"
             android:title="Thoát" />
     </group>
 </menu>
