--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="100dp"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -15,21 +15,8 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="89dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="89dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/nurse_1" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="65dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="60dp"
-            app:srcCompat="@drawable/hospital_1" />
 
     </LinearLayout>
 
@@ -37,13 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Doctor Tuan"
+        android:text="Tiện ích"
+        android:textStyle="bold"
+        android:textSize="40dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DrTuan@gmail.com" />
 
 </LinearLayout>
