--- a/app/src/main/res/layout/main_comment_activity.xml
+++ b/app/src/main/res/layout/main_comment_activity.xml
@@ -107,7 +107,7 @@
 
         <TextView
             android:id="@+id/tvEmailcmt"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="email"
@@ -116,6 +116,13 @@
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="8dp" />
+        <ImageView
+            android:onClick="back"
+            android:layout_marginTop="2dp"
+            android:layout_width="50dp"
+            android:gravity="center_vertical"
+            android:background= "@drawable/black_24dp"
+            android:layout_height="40dp" />
     </LinearLayout>
 
 
