--- a/app/src/main/res/layout/itemlistlick.xml
+++ b/app/src/main/res/layout/itemlistlick.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,5 +39,8 @@
         </LinearLayout>
 
     </LinearLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:background="@color/textBlack"
+        android:layout_height="1dp"/>
 </LinearLayout>
