--- a/app/src/main/res/layout/activity_tinh_luong_nuoc.xml
+++ b/app/src/main/res/layout/activity_tinh_luong_nuoc.xml
@@ -54,7 +54,7 @@
                 android:textColor="@color/colorPrimary"
                 android:layout_marginRight="10dp"
                 android:textSize="20dp"
-                android:text="số phút thể dục:"
+                android:text="Số phút thể dục:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <EditText
@@ -78,7 +78,7 @@
                 android:textColor="#09880D"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:text="kết Quả"
+                android:text="Kết Quả"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />" />
         </LinearLayout>
